<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/firstName_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/lastName_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateofbirth" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/dateOfBirth_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_textView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/address_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectedtags_out" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/tag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:flexDirection="row"/>

</LinearLayout>
